--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@vue/cli-service": "~5.0.0",
+    "@vue/devtools": "^6.1.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   }
