Updated npm packages. Plugged in: Axios.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "browserify-zlib": "^0.2.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
+    "tty-browserify": "^0.0.1",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
