Updated package.json info and modules

--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "project-3",
   "version": "0.1.0",
+  "description": "It's a front-end project made on Vue.js framework with Vue CLI. Data Form and Table exchange JSON data with JSON Placeholder API by Asynchronous API calls via Axios HTTP client, using Promises and Error handling. The Data resets only on reload and on closing of the current source. It doesn’t use cookies.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/whatever/testing.git"
+  },
+  "main": "src/index.js",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "browserify-zlib": "^0.2.0",
-    "core-js-pure": "^3.22.2",
+    "core-js": "^3.23.1",
+    "core-js-pure": "^3.23.1",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -17,11 +24,17 @@
     "tty-browserify": "^0.0.1",
     "url": "^0.11.0",
     "util": "^0.12.4",
-    "vue": "^3.2.13"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@vue/cli-service": "~5.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
-  }
+    "@vue/cli-service": "~5.0.6",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0"
+  },
+  "author": {
+    "name": "Yana Borozdina (Yanka_InCode)",
+    "email": "support@yankaincode.com",
+    "url": "yankaincode.com"
+  },
+  "license": "MIT"
 }
