--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "browserify-zlib": "^0.2.0",
-    "core-js": "^3.23.2",
+    "core-js": "^3.23.3",
     "core-js-pure": "^3.23.2",
     "gh-pages": "^4.0.0",
     "https-browserify": "^1.0.0",
@@ -30,6 +30,9 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
     "@vue/cli-service": "~5.0.6",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0"
